<resources>
    <string name="app_name">Education</string>
    <string name="title_message">Messages</string>
    <string name="logout">Đăng xuất</string>
    <string name="confirm">Xác nhận</string>
    <string name="confirm_message">Bạn thực sự muốn gửi tin nhắn?</string>
    <string name="send">Gửi</string>
    <string name="cancel">Huỷ</string>
    <string name="thpt">THPT Phan Chu Trinh</string>
    <string name="email_thpt">thpt-phanchutrinh@haiphong.edu.vn</string>
    <string name="messageManage">Message Management</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
</resources>
