<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_title_dialog"
            android:text="@string/confirm"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="@dimen/text_size_large"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_message"
            android:gravity="center"
            android:layout_margin="@dimen/margin_component_large"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_view"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_component_large">
        <Button
                android:id="@+id/btSend"
                android:text="@string/send"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:background="@drawable/bg_login"
                android:layout_marginRight="4dp"/>
        <Button
                android:id="@+id/btCancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:background="@drawable/bg_login"
                android:layout_marginLeft="4dp"/>
    </LinearLayout>
</LinearLayout>