<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/lnHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="32dp"
            android:paddingRight="16dp"
            android:paddingBottom="32dp">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/clAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvartar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/avatar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/colorAccent"/>

            <TextView
                    android:id="@+id/tvUserStatus"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/bg_status_online"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
                android:id="@+id/lnUserName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="start|center"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thpt"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tvUserMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:text="@string/email_thpt"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhite">

        <android.support.constraint.ConstraintLayout
                android:id="@+id/clMessageManagement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_component">

            <ImageView
                    android:id="@+id/imgSendMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_smartphone_message"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/tvSendMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/imgSendMessage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/messageManage"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginLeft="@dimen/margin_component"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/colorGray"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/clSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_component">

            <ImageView
                    android:id="@+id/imgSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/tvSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/imgSetting"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/setting"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginLeft="@dimen/margin_component"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/colorGray"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/clAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_component">

            <ImageView
                    android:id="@+id/imgAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_about"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/imgAbout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/about"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginLeft="@dimen/margin_component"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/colorGray"/>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/clLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="@dimen/padding_component">

            <ImageView
                    android:id="@+id/imgLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@+id/imgLogout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="Logout"
                    android:textSize="@dimen/text_size_normal"
                    android:layout_marginLeft="@dimen/margin_component"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/colorGray"/>

    </LinearLayout>

</LinearLayout>